--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # Hugo configuration file
-title: My Site
+title: Estoria
 
 # import hextra as module
 module:
@@ -18,29 +18,32 @@ markup:
 
 menu:
   main:
-    - name: Docs
+    - name: Documentation
       pageRef: /docs
       weight: 1
-    - name: About
-      pageRef: /about
+    - name: Examples
+      pageRef: /examples
       weight: 2
-    - name: Contact ↗
-      url: "https://github.com/imfing"
+    - name: Component Library
+      pageRef: /docs/component_library
       weight: 3
+    # - name: Contact ↗
+    #   url: "https://github.com/imfing"
+    #   weight: 3
     - name: Search
       weight: 4
       params:
         type: search
     - name: GitHub
       weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      url: "https://github.com/go-estoria/estoria"
       params:
         icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
+    # - name: Twitter
+    #   weight: 6
+    #   url: "https://twitter.com/"
+    #   params:
+    #     icon: x-twitter
 
 params:
   navbar:
@@ -49,8 +52,8 @@ params:
 
   footer:
     displayCopyright: false
-    displayPoweredBy: true
+    displayPoweredBy: false
 
   editURL:
-    enable: true
+    enable: false
     base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
