--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,7 +25,7 @@ menu:
       pageRef: /component-library
       weight: 2
     - name: Examples
-      pageRef: /examples
+      url: "https://github.com/go-estoria/estoria-examples"
       weight: 3
     # - name: Contact ↗
     #   url: "https://github.com/imfing"
