--- a/hugo.yaml
+++ b/hugo.yaml
@@ -57,3 +57,7 @@ params:
   editURL:
     enable: false
     base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+
+caches:
+  images:
+    dir: :cacheDir/images
